[tool.poetry]
name = "rosa"
version = "0.1.0"
description = "Risk Oriented Security Analysis tool from AppThreat"
authors = ["Team AppThreat <cloud@appthreat.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "lib"}]
homepage = "https://github.com/AppThreat/rosa"
repository = "https://github.com/AppThreat/rosa"
keywords = ["rosa", "sast", "sca", "sbom", "code analysis", "static analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
exclude = ["contrib", "test"]

[tool.poetry.scripts]
scan = 'scan:main'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
sarif-om = "^1.0.4"
jschema-to-python = "^1.2.3"
defusedxml = "^0.7.1"
GitPython = "^3.1.30"
appthreat-depscan = "^3.6.0"
httpx = "^0.23.3"
bandit = "^1.7.4"
checkov = "^2.2.341"
rich = "^13.3.1"
PyGithub = "^1.57"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
bandit = "^1.7.4"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
