[tool.poetry]
name = "rosa"
version = "3.0.0"
description = "Risk Oriented Security Analysis tool from AppThreat"
authors = ["Team AppThreat <cloud@appthreat.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "rosa"}]
homepage = "https://github.com/AppThreat/rosa"
repository = "https://github.com/AppThreat/rosa"
keywords = ["rosa", "sast", "sca", "sbom", "code analysis", "static analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
exclude = ["contrib", "test"]

[tool.poetry.scripts]
rosa = 'rosa.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
sarif-om = "^1.0.4"
jschema-to-python = "^1.2.3"
defusedxml = "^0.7.1"
GitPython = "^3.1.31"
appthreat-depscan = "^4.1.2"
httpx = "^0.24.1"
rich = "^13.3.5"
PyGithub = "^1.58.1"
PyYAML = "^6.0"
joern-lib = "^0.8.2"
joern2sarif = "^1.1.12"
quart = "^0.18.4"
blint = "^1.0.27"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pyinstaller = "^5.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
